<resources>
    <string name="app_name">SailingAssistant</string>
    <string name="interval">%1$d:%2$d:%3$d - %4$d:%5$d:%6$d</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="speed">Speed</string>
    <string name="inclinations">Inclinations</string>
    <string name="tensometers">Tensometers</string>
    <string name="acceleration">Acceleration</string>
    <string name="gyroscope">Gyroscope</string>
</resources>
