<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:clickable="true"
                                             android:focusable="true"
                                             tools:context=".DetailActivity">

    <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <TextView
                    android:id="@+id/tTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text=""
                    android:textAlignment="center"/>
            <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
            <TextView
                    android:text="@string/wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:id="@+id/wsText"/>
            <com.example.maciej.sailingassistant.GraphDrawer
                    android:id="@+id/wSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/wind_direction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:id="@+id/wdText"/>
            <com.example.maciej.sailingassistant.GraphDrawer
                    android:id="@+id/wDirection"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/speed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:id="@+id/speedText"/>
            <com.example.maciej.sailingassistant.GraphDrawer
                    android:id="@+id/speed"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>

            <TextView
                    android:text="@string/inclinations"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:id="@+id/inclText"/>
            <com.example.maciej.sailingassistant.GraphDrawer
                    android:id="@+id/incl"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/tensometers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:id="@+id/tensoText"/>
            <com.example.maciej.sailingassistant.GraphDrawer
                    android:id="@+id/tenso"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/acceleration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:id="@+id/accText"/>
            <com.example.maciej.sailingassistant.GraphDrawer
                    android:id="@+id/acc"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/gyroscope"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:id="@+id/gyroText"/>
            <com.example.maciej.sailingassistant.GraphDrawer
                    android:id="@+id/gyroscope"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>